[package]
name = "ctrlv2"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[dependencies]
fuse = { git = "https://github.com/zargony/rust-fuse" }
env_logger = "*"
libc = "*"
ftable = { path = "ftable" }
btree = { path = "btree" }
structopt = "*"
serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_yaml = "*"
paste = "*"
byteorder = "*"
regex = "*"
failure = "*"
memmap = "*"
i2cdev = "*"
lazy_static ="*"
num = "*"
derivative = "*"
isomorphism = { version = "*", features = ["serde"] }
itertools = "*"
log = "*"

[profile.release]
lto = true
opt-level = 3