# SPDX-FileCopyrightText: © 2019 Robin Ole Heinemann <robin.ole.heinemann@gmail.com>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "nctrl"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[dependencies]
ftable = { path = "ftable" }
btree = { path = "btree" }
fuseable = { path = "fuseable", features = ["bimap"] }
fuseable_derive = { path = "fuseable_derive" }
parse_num = { path = "parse_num" }

fuse = { path = "rust-fuse" }

env_logger = "*"
log = "*"

serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_yaml = "*"

derivative = "*"
itertools = "*"

isomorphism = { version = "*", features = ["serde"] }

memmap = "*"
i2cdev = "*"

regex = "*"
failure = "*"
lazy_static ="*"
num = "*"
paste = "*"
libc = "*"
structopt = "*"

rlua = "*"

rand = "*"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
# debug = true    # use for cargo flamegraph only, bloats the binary a lot (~4Mb -> 28Mb)