# SPDX-FileCopyrightText: © 2019 Robin Ole Heinemann <robin.ole.heinemann@gmail.com>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "btree"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[dev-dependencies]
rand = "*"
pbr = "*"

[profile.release]
lto = true
opt-level = 3

[features]
std = []
