# SPDX-FileCopyrightText: © 2019 Robin Ole Heinemann <robin.ole.heinemann@gmail.com>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "fuseable"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[features]
default = []
bimap = ["isomorphism"]

[dependencies]
failure = "*"
time = "*"

isomorphism = { version = "*", optional = true }

[lib]
name = "fuseable"
