# SPDX-FileCopyrightText: © 2019 Robin Ole Heinemann <robin.ole.heinemann@gmail.com>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "fuseable_derive"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@t-online.de>"]
edition = "2018"

[dependencies]
syn = { version = "*", features = ["extra-traits"]}
quote = "*"
proc-macro2 = "*"

[lib]
name = "fuseable_derive"
proc-macro = true
